syntax = "proto3";

import "const.proto";
import "data.proto";
import "excelconst.proto";
import "google/protobuf/any.proto";
package Proto;


//需要转发通知消息
message NotifyMsg
{
    string AccountID = 1;
    repeated google.protobuf.Any AnyNotify = 2;
}

enum ChatMessageType
{
    CMT_None =0 ; //None 
    CMT_Private =1; //私聊
    CMT_Group = 2; //群组聊天
}

message  ChatUser
{
    string UserName = 1; //nike name 
    string Uuid = 2; //nike
    int32 ChatServerId= 3;//serverid 
}

message Chat
{
    ChatUser Sender = 1; //消息发送者
    ChatUser Receiver = 2;//消息接收者
    string GroupId = 3;//group ID
    ChatMessageType ChatType = 4;// 类型
    string Content = 5; //消息体
}


message PlayerState
{
    enum StateType
    {
        Offline =0;
        Online = 1;
    }
    StateType State = 1;
    ChatUser User= 2;
    int32 ServerID = 3;
}


//通知用户进入战斗服务器
message N_Notify_BattleServer
{
    string ServerUUID = 1;//战斗服务器ID 
    GameServerInfo Server= 2; //战斗服务器地址
    int32 LevelID = 3;//levelid
    bool ReTry = 4;//重新尝试
}

//通知mathcgroup
message N_Notify_MatchGroup
{
    int32 LevelID = 1;
    repeated MatchPlayer Players = 2;
    string Id = 3;
}

//邀请通知
message N_Notify_InviteJoinMatchGroup
{
    int32 LevelID =1;
    string GroupId = 2;
    MatchPlayer Inviter= 3;
}